--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
         <title>BromTeque.com</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/css.css"
+        <link rel="stylesheet" href="css/css.css">
     </head>
     <body>
         <h1>Welcome to bromteque.com!</h1>
